// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the Login Component should render Login compoennt 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col justify-center min-h-screen overflow-hidden"
  >
    <div
      class="w-full p-6 m-auto bg-white rounded-md shadow-md lg:max-w-xl"
    >
      <h1
        class="text-3xl font-semibold text-center text-purple-700 underline"
      >
        Login Here
      </h1>
      <form
        class="mt-6"
      >
        <div
          class="mb-2"
        >
          <label
            class="block text-sm font-semibold text-gray-800"
            for="username"
          >
            User Name
          </label>
          <input
            class="block w-full px-4 py-2 mt-2 text-purple-700 bg-white border rounded-md focus:border-purple-400 focus:ring-purple-300 focus:outline-none focus:ring focus:ring-opacity-40"
            placeholder="Enter username"
            type="text"
            value=""
          />
        </div>
        <div
          class="mb-2"
        >
          <label
            class="block text-sm font-semibold text-gray-800"
            for="password"
          >
            Password
          </label>
          <input
            class="block w-full px-4 py-2 mt-2 text-purple-700 bg-white border rounded-md focus:border-purple-400 focus:ring-purple-300 focus:outline-none focus:ring focus:ring-opacity-40"
            placeholder="Password"
            type="password"
            value=""
          />
        </div>
        <div
          class="mt-6"
        >
          <button
            class="w-full px-4 py-2 tracking-wide text-white transition-colors duration-200 transform bg-purple-700 rounded-md hover:bg-purple-600 focus:outline-none focus:bg-purple-600"
            type="button"
          >
            Login
          </button>
        </div>
      </form>
    </div>
  </div>
  ,
</DocumentFragment>
`;

exports[`should render Login compoennt 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col justify-center min-h-screen overflow-hidden"
  >
    <div
      class="w-full p-6 m-auto bg-white rounded-md shadow-md lg:max-w-xl"
    >
      <h1
        class="text-3xl font-semibold text-center text-purple-700 underline"
      >
        Login Here
      </h1>
      <form
        class="mt-6"
      >
        <div
          class="mb-2"
        >
          <label
            class="block text-sm font-semibold text-gray-800"
            for="username"
          >
            User Name
          </label>
          <input
            class="block w-full px-4 py-2 mt-2 text-purple-700 bg-white border rounded-md focus:border-purple-400 focus:ring-purple-300 focus:outline-none focus:ring focus:ring-opacity-40"
            type="text"
            value=""
          />
        </div>
        <div
          class="mb-2"
        >
          <label
            class="block text-sm font-semibold text-gray-800"
            for="password"
          >
            Password
          </label>
          <input
            class="block w-full px-4 py-2 mt-2 text-purple-700 bg-white border rounded-md focus:border-purple-400 focus:ring-purple-300 focus:outline-none focus:ring focus:ring-opacity-40"
            type="password"
            value=""
          />
        </div>
        <div
          class="mt-6"
        >
          <button
            class="w-full px-4 py-2 tracking-wide text-white transition-colors duration-200 transform bg-purple-700 rounded-md hover:bg-purple-600 focus:outline-none focus:bg-purple-600"
            type="button"
          >
            Login
          </button>
        </div>
      </form>
    </div>
  </div>
  ,
</DocumentFragment>
`;
